--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -10,6 +10,22 @@ ja:
         necessary: "担任から放課後連絡が必要"
         unnecessary: "担任から放課後連絡が必要なし"
   activerecord:
+    absent_contact:
+      kind:
+        absent: "欠席"
+        latein: "遅刻"
+        earlyout: "早退"
+    model:
+      absent_contact:
+    attributes:
+      absent_contact:
+        kind:
+          absent: "欠席"
+          latein: "遅刻"
+          earlyout: "早退"
+        after_contact:
+          necessary: "担任から放課後連絡が必要"
+          unnecessary: "担任から放課後連絡が必要なし"
     errors:
       messages:
         record_invalid: "バリデーションに失敗しました: %{errors}"
