--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -31,6 +31,9 @@ ja:
         after_contact:
           necessary: "必要です"
           unnecessary: "必要なし"
+        t_checked:
+          confirmed: "確認済"
+          unconfirmed: "未確認"
     errors:
       messages:
         record_invalid: "バリデーションに失敗しました: %{errors}"
